--- a/index.htm
+++ b/index.htm
@@ -4,18 +4,18 @@
     <title>Mães de Princesa</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta name="viewport" content="user-scalable=no, initial-scale=0.7, width=device-width, viewport-fit=cover" />
-    <link rel="preload" href="script.js?v=1599421852555" as="script"/>
-<link rel="preload" href="media/panorama_6F0A122E_64C2_C37A_41D1_4AC08BAAE507_0/l/3/0_0.jpg?v=1599421852555" as="image"/>
-<link rel="preload" href="media/panorama_6F0A122E_64C2_C37A_41D1_4AC08BAAE507_0/r/3/0_0.jpg?v=1599421852555" as="image"/>
-<link rel="preload" href="media/panorama_6F0A122E_64C2_C37A_41D1_4AC08BAAE507_0/u/3/0_0.jpg?v=1599421852555" as="image"/>
-<link rel="preload" href="media/panorama_6F0A122E_64C2_C37A_41D1_4AC08BAAE507_0/d/3/0_0.jpg?v=1599421852555" as="image"/>
-<link rel="preload" href="media/panorama_6F0A122E_64C2_C37A_41D1_4AC08BAAE507_0/f/3/0_0.jpg?v=1599421852555" as="image"/>
-<link rel="preload" href="media/panorama_6F0A122E_64C2_C37A_41D1_4AC08BAAE507_0/b/3/0_0.jpg?v=1599421852555" as="image"/>
+    <link rel="preload" href="script.js?v=1599510154295" as="script"/>
+<link rel="preload" href="media/panorama_6F0A122E_64C2_C37A_41D1_4AC08BAAE507_0/l/3/0_0.jpg?v=1599510154295" as="image"/>
+<link rel="preload" href="media/panorama_6F0A122E_64C2_C37A_41D1_4AC08BAAE507_0/r/3/0_0.jpg?v=1599510154295" as="image"/>
+<link rel="preload" href="media/panorama_6F0A122E_64C2_C37A_41D1_4AC08BAAE507_0/u/3/0_0.jpg?v=1599510154295" as="image"/>
+<link rel="preload" href="media/panorama_6F0A122E_64C2_C37A_41D1_4AC08BAAE507_0/d/3/0_0.jpg?v=1599510154295" as="image"/>
+<link rel="preload" href="media/panorama_6F0A122E_64C2_C37A_41D1_4AC08BAAE507_0/f/3/0_0.jpg?v=1599510154295" as="image"/>
+<link rel="preload" href="media/panorama_6F0A122E_64C2_C37A_41D1_4AC08BAAE507_0/b/3/0_0.jpg?v=1599510154295" as="image"/>
 <script src="scorm.js" type="text/javascript"></script>
 <script>(function(i,s,o,g,r,a,m){i["GoogleAnalyticsObject"]=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)})(window,document,"script","//www.google-analytics.com/analytics.js","ga");ga("create", "UA-116087-3", "auto"); ga("send", "pageview");</script>
 <meta name="description" content="Virtual Tour"/>
 <meta name="theme-color" content="#FFFFFF"/>
-    <script src="lib/tdvplayer.js?v=1599421852555"></script>
+    <script src="lib/tdvplayer.js?v=1599510154295"></script>
     <script type="text/javascript">
         var player;
         var playersPlayingTmp = [];
@@ -53,10 +53,10 @@
             var settings = new TDV.PlayerSettings();
             
             settings.set(TDV.PlayerSettings.CONTAINER, document.getElementById('viewer'));
-            settings.set(TDV.PlayerSettings.SCRIPT_URL, 'script.js?v=1599421852555');
-            settings.set(TDV.PlayerSettings.WEBVR_POLYFILL_URL, 'lib/WebVRPolyfill.js?v=1599421852555');
-            settings.set(TDV.PlayerSettings.HLS_URL, 'lib/Hls.js?v=1599421852555');
-            settings.set(TDV.PlayerSettings.QUERY_STRING_PARAMETERS, 'v=1599421852555');
+            settings.set(TDV.PlayerSettings.SCRIPT_URL, 'script.js?v=1599510154295');
+            settings.set(TDV.PlayerSettings.WEBVR_POLYFILL_URL, 'lib/WebVRPolyfill.js?v=1599510154295');
+            settings.set(TDV.PlayerSettings.HLS_URL, 'lib/Hls.js?v=1599510154295');
+            settings.set(TDV.PlayerSettings.QUERY_STRING_PARAMETERS, 'v=1599510154295');
             window.tdvplayer = player = TDV.PlayerAPI.create(settings);
             player.bind('preloadMediaShow', beginFunc, player, true);
             player.bind('stateChange', beginFunc, player, true);
@@ -341,7 +341,7 @@ loadTour()
     
 </head>
 <body onload="onLoad()">
-    <div id="preloadContainer" style="background-color:rgba(255,255,255,1)"><div style="z-index: 4; position: absolute; background-image: url('loading/HTMLImage_6FE98F01_64DD_4B38_41C8_98848EFB1532.jpg'); background-size: contain; background-repeat: no-repeat; background-position: center center; overflow: hidden; right: 32.56457564575694%; top: 4.974271012006862%; width: 29.80%; height: 38.25%"></div><div style="z-index: 5; position: absolute; background-image: url('loading/HTMLImage_75EC8078_64C5_55C8_41CB_295C93C36DA9.jpeg'); background-size: contain; background-repeat: no-repeat; background-position: center center; overflow: hidden; right: 35.3321033210334%; top: 65.84048027444254%; width: 23.71%; height: 34.13%"></div><div style="z-index: 6; position: absolute; left: 28.413284132841326%; top: 51.346483704974275%; width: 47.23%; height: 14.24%"><div style="text-align:left; color:#000; "><DIV STYLE="text-align:center;"><SPAN STYLE="letter-spacing:0vmin;color:#777777;font-family:Arial, Helvetica, sans-serif;"><SPAN STYLE="font-size:3.09vmin;font-family:'Comic Sans MS';">Carregando Tour Virtual, Por Favor Aguarde...</SPAN></SPAN></DIV><p STYLE="margin:0; line-height:3.09vmin;"><BR STYLE="letter-spacing:0vmin;color:#000000;font-size:2.06vmin;font-family:'Segoe UI';"/></p></div></div></div>
+    <div id="preloadContainer" style="background-color:rgba(255,255,255,1)"><div style="z-index: 4; position: absolute; background-image: url('loading/HTMLImage_6FE98F01_64DD_4B38_41C8_98848EFB1532.jpg'); background-size: contain; background-repeat: no-repeat; background-position: center center; overflow: hidden; right: 32.56%; top: 4.97%; width: 29.80%; height: 38.25%"></div><div style="z-index: 5; position: absolute; background-image: url('loading/HTMLImage_75EC8078_64C5_55C8_41CB_295C93C36DA9.jpeg'); background-size: contain; background-repeat: no-repeat; background-position: center center; overflow: hidden; right: 35.33%; top: 65.84%; width: 23.71%; height: 34.13%"></div><div style="z-index: 6; position: absolute; left: 28.41%; top: 51.35%; width: 47.23%; height: 14.24%"><div style="text-align:left; color:#000; "><DIV STYLE="text-align:center;"><SPAN STYLE="letter-spacing:0vmin;color:#777777;font-family:Arial, Helvetica, sans-serif;"><SPAN STYLE="font-size:3.09vmin;font-family:'Comic Sans MS';">Carregando Tour Virtual, Por Favor Aguarde...</SPAN></SPAN></DIV><p STYLE="margin:0; line-height:3.09vmin;"><BR STYLE="letter-spacing:0vmin;color:#000000;font-size:2.06vmin;font-family:'Segoe UI';"/></p></div></div></div>
     <div id="viewer"></div>
 </body>
 </html>
